# tgrep

./: .gitattributes  .gitignore  BENCHMARKS.md  CONTRIBUTING.md  Cargo.toml  Makefile  README.md
.cargo/: config.toml
.github/workflows/: ado-cargo-config.toml  benchmark-chromium-win.yml  benchmark-chromium.yml  benchmark-gecko-win.yml  benchmark-gecko.yml  benchmark-go-win.yml  benchmark-go.yml  benchmark-kubernetes-win.yml  benchmark-kubernetes.yml  benchmark-rust-win.yml  benchmark-rust.yml  benchmark-win.yml  benchmark.yml  ci.yml  fuzz.yml  release.yml  sign-and-release.yml
fuzz/: Cargo.toml  README.md
fuzz/fuzz_targets/: fuzz_ondisk.rs  fuzz_query.rs  fuzz_trigram.rs
scripts/: benchmark-queries-chromium.json  benchmark-queries-gecko.json  benchmark-queries-go.json  benchmark-queries-kubernetes.json  benchmark-queries-rust.json  benchmark-queries.json  benchmark.ps1  benchmark.sh  install.ps1  install.sh
scripts/hooks/: pre-commit
tgrep-cli/: Cargo.toml  build.rs
tgrep-cli/src/: cpu.rs  glob_filter.rs  index.rs  main.rs  matching.rs  mem.rs  output.rs  repo_guard.rs  search.rs  serve.rs  status.rs  walkcount.rs
tgrep-cli/tests/: concurrent_search.rs  memory_cap.rs  ripgrep_compat.rs
tgrep-core/: Cargo.toml
tgrep-core/benches/: index_build.rs  query_execution.rs  trigram_extraction.rs
tgrep-core/src/: builder.rs  error.rs  filetypes.rs  gitignore.rs  hybrid.rs  lib.rs  live.rs  meta.rs  ondisk.rs  parallel.rs  query.rs  reader.rs  trigram.rs  walker.rs
tgrep-core/tests/: case_insensitive_roundtrip.rs  snapshot_consistency.rs
