[workspace]
members = ["tgrep-core", "tgrep-cli"]
resolver = "2"

[workspace.package]
version = "0.1.6"
edition = "2024"
license = "MIT"
repository = "https://github.com/microsoft/tgrep"
authors = ["Shengyu Fu"]

[workspace.dependencies]
tgrep-core = { path = "tgrep-core" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
