[package]
name = "tgrep-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Trigram-indexed grep — fast regex search for large codebases with client/server architecture"
keywords = ["grep", "search", "regex", "trigram", "cli"]
categories = ["command-line-utilities", "text-processing"]
readme = "../README.md"

[[bin]]
name = "tgrep"
path = "src/main.rs"

[dependencies]
tgrep-core = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
clap = { version = "4", features = ["derive"] }
notify = "7"
rayon = "1"
regex = "1"
lru = "0.16.3"
fs2 = "0.4.3"

[dev-dependencies]
assert_cmd = "2"
tempfile = "3"
predicates = "3"
